--- a/electron-vue-app/package.json
+++ b/electron-vue-app/package.json
@@ -25,6 +25,7 @@
     "autoprefixer": "^10.4.19",
     "electron": "31.0.1",
     "postcss": "^8.4.38",
+    "tailwind-merge": "^2.3.0",
     "tailwindcss": "^3.4.4",
     "vite": "^5.3.0"
   },
@@ -36,6 +37,8 @@
   "license": "MIT",
   "dependencies": {
     "electron-squirrel-startup": "^1.0.1",
+    "oh-vue-icons": "^1.0.0-rc3",
+    "pinia": "^2.1.7",
     "vue": "^3.4.27"
   }
 }
