--- a/electron-vue-app/package.json
+++ b/electron-vue-app/package.json
@@ -21,6 +21,7 @@
     "@electron-forge/plugin-fuses": "^7.4.0",
     "@electron-forge/plugin-vite": "^7.4.0",
     "@electron/fuses": "^1.8.0",
+    "@tailwindcss/typography": "^0.5.13",
     "@vitejs/plugin-vue": "^5.0.5",
     "autoprefixer": "^10.4.19",
     "electron": "31.0.1",
@@ -36,9 +37,14 @@
   },
   "license": "MIT",
   "dependencies": {
+    "@imengyu/vue3-context-menu": "^1.4.1",
+    "debounce": "^2.1.0",
     "electron-squirrel-startup": "^1.0.1",
-    "oh-vue-icons": "^1.0.0-rc3",
+    "md-editor-v3": "^4.17.0",
     "pinia": "^2.1.7",
-    "vue": "^3.4.27"
+    "sqlite3": "^5.1.7",
+    "vue": "^3.4.27",
+    "vue3-popper": "^1.5.0",
+    "vue3-toastify": "^0.2.2"
   }
 }
