--- a/next-todo-app/package.json
+++ b/next-todo-app/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "next-todo-list",
+  "name": "next-todo-app",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -9,21 +9,18 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "firebase": "^10.12.0",
-    "next": "14.2.3",
     "react": "^18",
     "react-dom": "^18",
-    "react-icons": "^5.2.1",
-    "zustand": "^4.5.2"
+    "next": "14.2.4"
   },
   "devDependencies": {
+    "typescript": "^5",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
-    "eslint": "^8",
-    "eslint-config-next": "14.2.3",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
-    "typescript": "^5"
+    "eslint": "^8",
+    "eslint-config-next": "14.2.4"
   }
 }
