--- a/vue-todo-list/package.json
+++ b/vue-todo-list/package.json
@@ -14,9 +14,15 @@
     "format": "prettier --write src/"
   },
   "dependencies": {
-    "@vueform/vueform": "^1.9.9",
+    "@tanstack/vue-query": "^5.51.1",
+    "@vueform/builder": "^1.4.5",
+    "@vueform/vueform": "^1.10.1",
+    "ant-design-vue": "^4.2.3",
+    "apexcharts": "^3.50.0",
+    "axios": "^1.7.2",
     "pinia": "^2.1.7",
     "vue": "^3.4.21",
+    "vue-axios": "^3.5.2",
     "vue-router": "^4.3.0"
   },
   "devDependencies": {
@@ -38,6 +44,7 @@
     "prettier": "^3.2.5",
     "tailwindcss": "^3.4.3",
     "typescript": "~5.4.0",
+    "unplugin-vue-components": "^0.27.2",
     "vite": "^5.2.8",
     "vite-plugin-vue-devtools": "^7.0.25",
     "vitest": "^1.4.0",
