--- a/vue-todo-list/package.json
+++ b/vue-todo-list/package.json
@@ -14,6 +14,7 @@
     "format": "prettier --write src/"
   },
   "dependencies": {
+    "@ant-design/icons-vue": "^7.0.1",
     "@tanstack/vue-query": "^5.51.1",
     "@vueform/builder": "^1.4.5",
     "@vueform/vueform": "^1.10.1",
