--- a/vue-todo-list/package.json
+++ b/vue-todo-list/package.json
@@ -14,7 +14,6 @@
     "format": "prettier --write src/"
   },
   "dependencies": {
-    "@ant-design/icons-vue": "^7.0.1",
     "@tanstack/vue-query": "^5.51.1",
     "@vueform/builder": "^1.4.5",
     "@vueform/vueform": "^1.10.1",
@@ -27,6 +26,7 @@
     "vue-router": "^4.3.0"
   },
   "devDependencies": {
+    "@iconify/vue": "^4.1.2",
     "@rushstack/eslint-patch": "^1.8.0",
     "@tsconfig/node20": "^20.1.4",
     "@types/jsdom": "^21.1.6",
